--- a/index.html
+++ b/index.html
@@ -112,6 +112,12 @@
   </div>
 </div>
 
+<div class="section" style="text-align: center;">
+  <i class="box_tt" style="font-size: 24px;">A great thought begins by seeing something differently, with a shift of the mind’s eye.</i>
+  <br>
+  <i class="box_ttr" style="font-size: 20px;">-- Albert Einstein</i>
+</div>
+
 <div class="section">
   <div class="title">Gallery</div>
   <p class="rp">Please rotate or zoom in and out of all the artwork on this page to experience the fun of changing perspectives.</p>
