--- a/index.html
+++ b/index.html
@@ -61,9 +61,18 @@
         font-size: 25px;
         line-height:50px;
         margin: 0px;
+        font-family: Shantell Sans,serif;
 }
 .box_tt {
         height: 36px;
+        text-align: center;
+        font-size: 18px;
+        line-height:36px;
+        margin: 0px;
+        font-family: Shantell Sans,serif;
+}
+.box_mix {
+        height: 60px;
         text-align: center;
         font-size: 18px;
         line-height:36px;
@@ -115,7 +124,7 @@
 <div class="section" style="text-align: center;">
   <i class="box_tt" style="font-size: 24px;">A great thought begins by seeing something differently, with a shift of the mind’s eye.</i>
   <br>
-  <i class="box_ttr" style="font-size: 20px;">-- Albert Einstein</i>
+  <i class="box_tt" style="font-size: 20px;">-- Albert Einstein</i>
 </div>
 
 <div class="section">
@@ -124,11 +133,81 @@
   <hr />
   <p class="box_tt">Issac Newton&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Albert Einstein&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Alan Turing</p>
   <hr /> 
-  <iframe src="./assets/star.html" width="100%" height="800px;" frameBorder="0"></iframe>
+  <iframe src="./assets/Star.html" width="100%" height="800px;" frameBorder="0"></iframe>
   <hr />
   <p class="box_tt">London Tower Bridge&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Sydney Opera House&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Athens Parthenon</p>
   <hr /> 
-  <iframe src="./assets/arch.html" width="100%" height="800px;" frameBorder="0"></iframe>
+  <iframe src="./assets/Architecture.html" width="100%" height="800px;" frameBorder="0"></iframe>
+  <hr />
+  <p class="box_tt">Leonardo da Vinci&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Michelangelo&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Raphael</p>
+  <hr /> 
+  <iframe src="./assets/Renaissance.html" width="100%" height="800px;" frameBorder="0"></iframe>
+  <hr />
+  <p class="box_tt">Stormtrooper&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Darth Vader&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Yoda</p>
+  <hr /> 
+  <iframe src="./assets/Starwar.html" width="100%" height="800px;" frameBorder="0"></iframe>
+  <hr />
+  <p class="box_tt">Spider Man&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Iron Man&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Caption America</p>
+  <hr /> 
+  <iframe src="./assets/Hero.html" width="100%" height="800px;" frameBorder="0"></iframe>
+  <hr />
+  <p class="box_tt">Unicorn&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Dragon&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Phoenix</p>
+  <hr /> 
+  <iframe src="./assets/Fantastic_Beast.html" width="100%" height="800px;" frameBorder="0"></iframe>
+  <hr />
+  <p class="box_tt">Tree&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Flower&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Sun</p>
+  <hr /> 
+  <iframe src="./assets/Tree.html" width="100%" height="800px;" frameBorder="0"></iframe>
+  <!-- <hr />
+  <p class="box_tt">Cat&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Dog&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Bird</p>
+  <hr /> 
+  <iframe src="./assets/Animal.html" width="100%" height="800px;" frameBorder="0"></iframe>
+   -->
+  <hr />
+  <p class="box_tt">Thor&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Loki&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Hulk</p>
+  <hr /> 
+  <iframe src="./assets/Marvel.html" width="100%" height="800px;" frameBorder="0"></iframe>
+  <!-- <hr />
+  <p class="box_tt">Spider Man's Web&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Batman's Batarang&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Caption America's Shield</p>
+  <hr /> 
+  <iframe src="./assets/Hero_Item.html" width="100%" height="800px;" frameBorder="0"></iframe>
+   -->
+  <hr />
+  <p class="box_tt">Pikachu&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Charmander&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Bulbasaur</p>
+  <hr /> 
+  <iframe src="./assets/Pokemon.html" width="100%" height="800px;" frameBorder="0"></iframe>
+  <hr />
+  <p class="box_tt">Mario&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Luigi&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Princess Peach</p>
+  <hr /> 
+  <iframe src="./assets/Mario.html" width="100%" height="800px;" frameBorder="0"></iframe>
+  <hr />
+  <p class="box_tt">Aragorn&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Legolas&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Gimli</p>
+  <hr /> 
+  <iframe src="./assets/Lord.html" width="100%" height="800px;" frameBorder="0"></iframe>
+  <hr />
+  <p class="box_tt">Daenerys Targaryen&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Jon Snow&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Tyrion Lannister</p>
+  <hr /> 
+  <iframe src="./assets/Thrones.html" width="100%" height="800px;" frameBorder="0"></iframe>
+  <hr />
+  <p class="rp">Visual Control</p>
+  <hr />
+  <p class="box_mix"><img src="./assets/edges/G.png" width="60px;" height="60px;" border="1">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="./assets/edges/E.png" width="60px;" height="60px;" border="1">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="./assets/edges/B.png" width="60px;" height="60px;" border="1"></p>
+  <hr /> 
+  <iframe src="./assets/GEB.html" width="100%" height="800px;" frameBorder="0"></iframe>
+  <hr />
+  <p class="box_mix"><img src="./assets/edges/alien.png" width="60px;" height="60px;" border="1">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="./assets/edges/robot.png" width="60px;" height="60px;" border="1">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="./assets/edges/astronaut.png" width="60px;" height="60px;" border="1"></p>
+  <hr />
+  <iframe src="./assets/Character.html" width="100%" height="800px;" frameBorder="0"></iframe>
+  <hr />
+  <p class="rp">Hybrid Control</p>
+  <hr /> 
+  <p class="box_mix"><img src="./assets/edges/cvpr.png" width="60px;" height="60px;" border="1">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="./assets/edges/2024.png" width="60px;" height="60px;" border="1">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Seattle</p>
+  <hr /> 
+  <iframe src="./assets/CVPR.html" width="100%" height="800px;" frameBorder="0"></iframe>
+  <hr />
+  <p class="box_mix"><img src="./assets/edges/sherlock.png" width="60px;" height="60px;" border="1">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Doctor Watson&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;London Big Ben</p>
+  <hr /> 
+  <iframe src="./assets/Sherlock.html" width="100%" height="800px;" frameBorder="0"></iframe>
 </div>
 
 </body>
