--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>MultiViewDreamer</title>
+  <title>DreamWire</title>
 
   <link href="./assets/bootstrap.min.css" rel="stylesheet">
   <link href="./assets/font.css" rel="stylesheet" type="text/css">
@@ -86,6 +86,12 @@
         font-size: 20px;
         font-weight: bold;
 }
+.rpn {
+        height: 20px;
+        text-align: center;
+        line-height:20px;
+        font-size: 20px;
+}
 </style>
 
 <body>
@@ -130,6 +136,7 @@
 <div class="section">
   <div class="title">Gallery</div>
   <p class="rp">Please rotate or zoom in and out of all the artwork on this page to experience the fun of changing perspectives.</p>
+  <p class="rpn">Your patience is appreciated as the model is loading. Thank you for your understanding.</p>
   <hr />
   <p class="box_tt">Issac Newton&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Albert Einstein&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Alan Turing</p>
   <hr /> 
