page review count

--- a/index.html
+++ b/index.html
@@ -124,6 +124,19 @@
     <a href="https://arxiv.org/abs/2304.11744" target="_blank">[Paper]</a>&nbsp; &nbsp;
     <a href="https://github.com/WinKawaks/DreamWire" target="_blank">[Code]</a>&nbsp; &nbsp;
     <!-- <a href="" target="_blank">[Presentation (TBD)]</a>&nbsp; &nbsp; -->
+    <br>
+    <br>
+    <img src="https://badges.toozhao.com/badges/01HG0WE973EGR8ENZCAEZR5G4G/green.svg" />
+    <br>
+  </div>
+
+  <div class="teaser">
+    <img src="./assets/img/overview.png" style="width: 100%;">
+    <br>
+    <br>
+    <font size="3">
+      <b>Multi-view art done generatively by DreamWire.</b> We present DreamWire as the first system that takes user prompt for each view as input -- either via the expressive vehicle of text or image -- and produces 3D line sculptures showing distinct interpretations when viewed at different angles, i.e., multi-view wire art (MVWA). Each MVWA instance is created by optimising a set of randomly initialised Bézier curves towards the visual matching objective of a universal generative prior (diffusion models or ControlNet). Notably, the "GBE" here pays tribute to the book "Gödel, Escher, Bach: an Eternal Golden Braid", which discusses how systems can acquire meaningful context despite being made of "meaningless" elements, just like what MVWA does.
+    </font>
   </div>
 </div>
 
@@ -132,6 +145,8 @@
   <br>
   <i class="box_tt" style="font-size: 20px;">-- Albert Einstein</i>
 </div>
+
+
 
 <div class="section">
   <div class="title">Gallery</div>
@@ -215,6 +230,19 @@
   <p class="box_mix"><img src="./assets/edges/sherlock.png" width="60px;" height="60px;" border="1">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Doctor Watson&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;London Big Ben</p>
   <hr /> 
   <iframe src="./assets/Sherlock.html" width="100%" height="800px;" frameBorder="0"></iframe>
+</div>
+
+<div class="section">
+  <div class="bibtex">BibTeX</div>
+<pre>
+@article{qu2023dreamwire,
+  title={Wired Perspectives: Multi-View Wire Art Embraces Generative AI},
+  author={Qu, Zhiyu and Yang, Lan and Zhang, Honggang and Xiang, Tao and Pang, Kaiyue and Song, Yi-Zhe},
+  journal={arXiv:2306.07449},
+  year={2023}
+}
+</pre>
+  </div>
 </div>
 
 </body>
