--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <br>
     <br>
     <font size="3">
-      <b>Multi-view art done generatively by DreamWire.</b> We present DreamWire as the first system that takes user prompt for each view as input -- either via the expressive vehicle of text or image -- and produces 3D line sculptures showing distinct interpretations when viewed at different angles, i.e., multi-view wire art (MVWA). Each MVWA instance is created by optimising a set of randomly initialised Bézier curves towards the visual matching objective of a universal generative prior (diffusion models or ControlNet). Notably, the "GBE" here pays tribute to the book "Gödel, Escher, Bach: an Eternal Golden Braid", which discusses how systems can acquire meaningful context despite being made of "meaningless" elements, just like what MVWA does.
+      <b>Multi-view art done generatively by DreamWire.</b> We present DreamWire as the first system that takes user prompt for each view as input -- either via the expressive vehicle of text or image -- and produces 3D line sculptures showing distinct interpretations when viewed at different angles, i.e., multi-view wire art (MVWA). Each MVWA instance is created by optimising a set of randomly initialised Bézier curves towards the visual matching objective of a universal generative prior (diffusion models or ControlNet).
     </font>
   </div>
 </div>
@@ -144,6 +144,9 @@
   <i class="box_tt" style="font-size: 24px;">A great thought begins by seeing something differently, with a shift of the mind’s eye.</i>
   <br>
   <i class="box_tt" style="font-size: 20px;">-- Albert Einstein</i>
+  <br>
+  <br>
+  <iframe width="1000px" height="563px" src="https://www.youtube.com/embed/CKX3GBrBv58?si=QErM6xJSv8rcswgM" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
 
 
@@ -222,10 +225,6 @@
   <iframe src="./assets/Character.html" width="100%" height="800px;" frameBorder="0"></iframe>
   <hr />
   <p class="rp">Hybrid Control</p>
-  <hr /> 
-  <p class="box_mix"><img src="./assets/edges/cvpr.png" width="60px;" height="60px;" border="1">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="./assets/edges/2024.png" width="60px;" height="60px;" border="1">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Seattle</p>
-  <hr /> 
-  <iframe src="./assets/CVPR.html" width="100%" height="800px;" frameBorder="0"></iframe>
   <hr />
   <p class="box_mix"><img src="./assets/edges/sherlock.png" width="60px;" height="60px;" border="1">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Doctor Watson&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;London Big Ben</p>
   <hr /> 
