--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <div class="section">
   <!-- === Title Starts === -->
     <div class="title">
-      <b>Wired Perspectives: Multi-View Wire Art Succumbs to Generative AI</b>
+      <b>Wired Perspectives: Multi-View Wire Art Embraces Generative AI</b>
     </div>
   <!-- === Title Ends === -->
   <div class="author">
@@ -123,6 +123,7 @@
   <div class="link">
     <a href="https://arxiv.org/abs/2304.11744" target="_blank">[Paper]</a>&nbsp; &nbsp;
     <a href="https://github.com/WinKawaks/DreamWire" target="_blank">[Code]</a>&nbsp; &nbsp;
+    <a href="https://www.bilibili.com/video/BV1xG411S7sV/?share_source=copy_web&vd_source=db2535a36d39f184079ba71e4fede114" target="_blank">[bilibili]</a>&nbsp; &nbsp;
     <!-- <a href="" target="_blank">[Presentation (TBD)]</a>&nbsp; &nbsp; -->
     <br>
     <br>
