--- a/index.html
+++ b/index.html
@@ -94,9 +94,10 @@
 }
 .group{}
 .loadMoreButton {
+  height:46px;
   display: block;
   margin: 0 auto;
-  padding: 10px 20px;
+  padding: 0px 20px;
   background-color: #3498db;
   color: #fff;
   border: none;
@@ -282,9 +283,8 @@
   </div>
  -->
  <div id="load">
-    <br>
     <div style="text-align: center;">
-      <button id="loadMoreButton">Load More</button>
+      <button id="loadMoreButton", class="loadMoreButton">Load More</button>
     </div>
   </div>
 </div>
