--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
   </div>
   <br>
   <div class="link">
-    <a href="https://drive.google.com/file/d/1F99UPYrNJ2-E7dENFIVhLYuzW-_05VwD/view?usp=sharing" target="_blank">[Paper]</a>&nbsp; &nbsp;
+    <a href="https://arxiv.org/abs/2311.15421" target="_blank">[Paper]</a>&nbsp; &nbsp;
     <a href="https://github.com/WinKawaks/DreamWire" target="_blank">[Code]</a>&nbsp; &nbsp;
     <a href="https://www.bilibili.com/video/BV1xG411S7sV/?share_source=copy_web&vd_source=db2535a36d39f184079ba71e4fede114" target="_blank">[bilibili]</a>&nbsp; &nbsp;
     <!-- <a href="" target="_blank">[Presentation (TBD)]</a>&nbsp; &nbsp; -->
