--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 @article{qu2023dreamwire,
   title={Wired Perspectives: Multi-View Wire Art Embraces Generative AI},
   author={Qu, Zhiyu and Yang, Lan and Zhang, Honggang and Xiang, Tao and Pang, Kaiyue and Song, Yi-Zhe},
-  journal={arXiv},
+  journal={arXiv:2311.15421},
   year={2023}
 }
 </pre>
