--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
   <hr />
   </div>
   <div class="group">
-  <p class="box_tt">Spider Man&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Iron Man&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Caption America</p>
+  <p class="box_tt">Spider Man&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Iron Man&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Captain America</p>
   <hr /> 
   <iframe src="./assets/Hero.html" width="100%" height="800px;" frameBorder="0"></iframe>
   <hr />
@@ -235,7 +235,7 @@
   <hr />
   </div>
   <div class="group">
-  <p class="box_tt">Spider Man's Web&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Batman's Batarang&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Caption America's Shield</p>
+  <p class="box_tt">Spider Man's Web&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Batman's Batarang&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Captain America's Shield</p>
   <hr /> 
   <iframe src="./assets/Hero_Item.html" width="100%" height="800px;" frameBorder="0"></iframe>
   <hr />
@@ -297,11 +297,11 @@
   const groupContent = [
   '<div class="group"><p class="box_tt">Leonardo da Vinci&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Michelangelo&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Raphael</p><hr /> <iframe src="./assets/Renaissance.html" width="100%" height="800px;" frameBorder="0"></iframe><hr /></div>',
   '<div class="group"><p class="box_tt">Stormtrooper&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Darth Vader&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Yoda</p><hr /> <iframe src="./assets/Starwar.html" width="100%" height="800px;" frameBorder="0"></iframe><hr /></div>',
-  '<div class="group"><p class="box_tt">Spider Man&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Iron Man&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Caption America</p><hr /> <iframe src="./assets/Hero.html" width="100%" height="800px;" frameBorder="0"></iframe><hr /></div>',
+  '<div class="group"><p class="box_tt">Spider Man&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Iron Man&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Captain America</p><hr /> <iframe src="./assets/Hero.html" width="100%" height="800px;" frameBorder="0"></iframe><hr /></div>',
   '<div class="group"><p class="box_tt">Unicorn&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Dragon&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Phoenix</p><hr /> <iframe src="./assets/Fantastic_Beast.html" width="100%" height="800px;" frameBorder="0"></iframe><hr /></div>',
   '<div class="group"><p class="box_tt">Tree&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Flower&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Sun</p><hr /> <iframe src="./assets/Tree.html" width="100%" height="800px;" frameBorder="0"></iframe><hr /></div>',
   '<div class="group"><p class="box_tt">Thor&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Loki&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Hulk</p><hr /> <iframe src="./assets/Marvel.html" width="100%" height="800px;" frameBorder="0"></iframe><hr /></div>',
-  '<div class="group"><p class="box_tt">Spider Man\'s Web&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Batman\'s Batarang&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Caption America\'s Shield</p><hr /> <iframe src="./assets/Hero_Item.html" width="100%" height="800px;" frameBorder="0"></iframe><hr /></div>',
+  '<div class="group"><p class="box_tt">Spider Man\'s Web&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Batman\'s Batarang&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Captain America\'s Shield</p><hr /> <iframe src="./assets/Hero_Item.html" width="100%" height="800px;" frameBorder="0"></iframe><hr /></div>',
   '<div class="group"><p class="box_tt">Pikachu&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Charmander&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Bulbasaur</p><hr /> <iframe src="./assets/Pokemon.html" width="100%" height="800px;" frameBorder="0"></iframe><hr /></div>',
   '<div class="group"><p class="box_tt">Mario&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Luigi&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Princess Peach</p><hr /> <iframe src="./assets/Mario.html" width="100%" height="800px;" frameBorder="0"></iframe><hr /></div>',
   '<div class="group"><p class="box_tt">Aragorn&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Legolas&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Gimli</p><hr /> <iframe src="./assets/Lord.html" width="100%" height="800px;" frameBorder="0"></iframe><hr /></div>',
